Styling fix, and fix broken CSS source maps.

--- a/wp-content/themes/layobservers/assets/css/main.css
+++ b/wp-content/themes/layobservers/assets/css/main.css
@@ -6243,6 +6243,7 @@ ul.child-list li:last-child {
   display: inline-block;
   border-bottom: 1px solid #c5c5c5;
   padding-bottom: 1em;
+  width: 100%;
 }
 .side-item {
   display: block;
