--- a/wp-content/themes/layobservers/assets/less/_global.less
+++ b/wp-content/themes/layobservers/assets/less/_global.less
@@ -33,7 +33,7 @@ figure {
 			}
 	}
 
-} 
+}
 
 ul.child-list {
 	margin-left: 0;
@@ -73,6 +73,7 @@ ul.child-list {
 	display: inline-block;
 	border-bottom: 1px solid @thin-divider-clr;
 	padding-bottom: 1em;
+  width: 100%;
 }
 
 .side-item {
@@ -252,7 +253,7 @@ ul.child-list {
 		th {
 			background: #efefef;
 			padding: 6px;
-			
+
 		}
 		td {
 			padding: 12px;
